# agent-town

./: .gitignore  CLAUDE.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md
.planning/milestones/: v1.1-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: config.py  gateway.py  main.py  schemas.py
backend/agents/: __init__.py  agent.py  loader.py
backend/prompts/: __init__.py  action_decide.py  arena_decide.py  conversation_start.py  conversation_turn.py  importance_score.py  schedule_decompose.py  schedule_init.py  schedule_revise.py
backend/routers/: agents.py  health.py  llm.py  ws.py
backend/schemas/: __init__.py  agent.py  cognition.py  events.py  ws.py
backend/simulation/: connection_manager.py  engine.py  map_generator.py  world.py
docs/: tiled-authoring-guide.md
frontend/: biome.json  index.html  package.json  vitest.config.ts
scripts/: convert_sprite_atlas.py  copy_assets.py  sync_map.py
tests/: conftest.py  test_agent_class.py  test_agent_loader.py  test_agents_router.py  test_building.py  test_building_hours.py  test_cognition.py  test_concurrency.py  test_converse_repetition.py  test_cross_validation.py  test_decide_cascade.py  test_engine_adaptive.py  test_event_injection.py  test_events.py  test_gateway_semaphore.py  test_health.py  test_integration.py  test_memory.py  test_runtime_events.py  test_simulation.py  test_structured_output.py  test_sync_map.py  test_world.py  test_ws_contract.py
(+166 files in other folders)
