[project]
name = "agent-town"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.44",
    "pydantic>=2.12",
    "litellm>=1.83.0",
    "instructor>=1.15",
    "httpx>=0.28",
    "chromadb>=1.5.7",
    "sentence-transformers>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.3",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
